# moses-scorers

./: .gitignore  CMakeLists.txt  README.md  moses_scorers.cpp  moses_scorers.h
example/: .gitignore  Makefile  newstest2015.single.out  run_scorer.cpp
mert/: BleuDocScorer.cpp  BleuDocScorer.h  BleuScorer.cpp  BleuScorer.h  CMakeLists.txt  CderScorer.cpp  CderScorer.h  Fdstream.h  FeatureArray.cpp  FeatureArray.h  FeatureData.cpp  FeatureData.h  FeatureStats.cpp  FeatureStats.h  FileStream.cpp  FileStream.h  GleuScorer.cpp  GleuScorer.h  GzFileBuf.cpp  GzFileBuf.h  HwcmScorer.cpp  HwcmScorer.h  InternalTree.cpp  InternalTree.h  InterpolatedScorer.cpp  InterpolatedScorer.h  M2.cpp  M2.h  M2Scorer.cpp  M2Scorer.h  MeteorScorer.cpp  MeteorScorer.h  Ngram.h  PerScorer.cpp  PerScorer.h  Permutation.cpp  Permutation.h  PermutationScorer.cpp  PermutationScorer.h  PreProcessFilter.cpp  (+35 more)
mert/TER/: alignmentStruct.cpp  alignmentStruct.h  bestShiftStruct.cpp  bestShiftStruct.h  hashMap.cpp  hashMap.h  hashMapInfos.cpp  hashMapInfos.h  hashMapStringInfos.cpp  hashMapStringInfos.h  infosHasher.cpp  infosHasher.h  stringHasher.cpp  stringHasher.h  stringInfosHasher.cpp  stringInfosHasher.h  terAlignment.cpp  terAlignment.h  terShift.cpp  terShift.h  tercalc.cpp  tercalc.h  tools.cpp  tools.h
moses/: TypeDef.h  Util.cpp  Util.h
tests/: CMakeLists.txt
util/: CMakeLists.txt  exception.cc  exception.hh  have.hh  random.cc  scoped.cc  scoped.hh  string_piece.cc  string_piece.hh
