add_library(mert OBJECT
    Util.cpp
    GzFileBuf.cpp
    FileStream.cpp
    Timer.cpp
    ScoreStats.cpp
    ScoreArray.cpp
    ScoreData.cpp
    ScoreDataIterator.cpp
    FeatureStats.cpp
    FeatureArray.cpp
    FeatureData.cpp
    FeatureDataIterator.cpp
    ForestRescore.cpp
    HopeFearDecoder.cpp
    Hypergraph.cpp
    MiraFeatureVector.cpp
    MiraWeightVector.cpp
    HypPackEnumerator.cpp
    Data.cpp
    BleuScorer.cpp
    BleuDocScorer.cpp
    SemposScorer.cpp
    SemposOverlapping.cpp
    InterpolatedScorer.cpp
    Point.cpp
    PerScorer.cpp
    HwcmScorer.cpp
    InternalTree.cpp
    M2.cpp
    M2Scorer.cpp
    Scorer.cpp
    ScorerFactory.cpp
    Optimizer.cpp
    OptimizerFactory.cpp
    TER/alignmentStruct.cpp
    TER/hashMap.cpp
    TER/hashMapStringInfos.cpp
    TER/stringHasher.cpp
    TER/terAlignment.cpp
    TER/terShift.cpp
    TER/hashMapInfos.cpp
    TER/infosHasher.cpp
    TER/stringInfosHasher.cpp
    TER/tercalc.cpp
    TER/tools.cpp
    TER/bestShiftStruct.cpp
    TerScorer.cpp
    CderScorer.cpp
    MeteorScorer.cpp
    Vocabulary.cpp
    PreProcessFilter.cpp
    SentenceLevelScorer.cpp
    Permutation.cpp
    PermutationScorer.cpp
    StatisticsBasedScorer.cpp
)
